Fix overflow in profile tweet section with avatar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -92,3 +92,11 @@ a:hover {
 .right_home {
   min-width: 280px;
 }
+
+.profile-main {
+  min-width: 973px;
+}
+
+.profile-tweet {
+  min-width: 973px;
+}
